# custom-hot-corners-extended

./: .gitignore  CHANGELOG.md  Makefile  Makefile.am  README.md  actionTrigger.js  actions.js  configure.ac  corner-widget-40.ui  corner-widget.ui  extension.js  generate_pot.sh  keybindings.js  makefile  metadata.json  metadata.json.in  misc-settings-widget-40.ui  misc-settings-widget.ui  prefs-widget.ui  prefs.js  settings.js  shaderLib.js  shaders.js  shaders3.js  shaders40.js  stylesheet.css  winTmb.js  windowSwitcherPopup.js  wintmb.js
icons/: Makefile.am
po/: LINGUAS  Makevars  POTFILES.in  cs.po  custom-hot-corners-extended.pot  de.po  tr.po
schemas/: Makefile.am  gschemas.compiled  org.gnome.shell.extensions.custom-hot-corners-extended.gschema.xml  org.gnome.shell.extensions.custom-hot-corners.gschema.xml
src/common/: settings.js  utils.js
src/extension/: actionTrigger.js  actions.js  hotCorners.js  keybindings.js  panelButton.js  panelMenu.js  shaders.js  winTmb.js
src/prefs/: aboutPage.js  actionChooserDialog.js  actionList.js  customMenusPage.js  keyboardPage.js  monitorPages.js  optionList.js  optionsFactory.js  optionsPage.js  optionsPageAdw.js  treeViewPage.js  utils.js
