iconsdir = $(datadir)/gnome-shell/extensions/$(uuid)/icons
icons_DATA = TopLeft.svg \
             TopRight.svg \
             BottomLeft.svg \
             BottomRight.svg \
             TopLeftHE.svg \
             TopRightHE.svg \
             BottomLeftHE.svg \
             BottomRightHE.svg \
             TopLeftVE.svg \
             TopRightVE.svg \
             BottomLeftVE.svg \
             BottomRightVE.svg \
             Mouse-1.svg \
             Mouse-2.svg \
             Mouse-3.svg \
             Mouse-4.svg \
             Mouse-5.svg

EXTRA_DIST = $(icons_DATA)
